trying to hook up google play

--- a/RunSubClub/app/src/main/res/layout/fragment_plans.xml
+++ b/RunSubClub/app/src/main/res/layout/fragment_plans.xml
@@ -3,6 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/screen_wait"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:contentDescription="@string/content_description_app_loading_image"
+        android:src="@drawable/wait"
+        android:visibility="gone" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
