--- a/RunSubClub/app/src/main/res/layout/fragment_youtube.xml
+++ b/RunSubClub/app/src/main/res/layout/fragment_youtube.xml
@@ -2,10 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/text_strength"
-        android:textStyle="bold"
-        android:layout_gravity="center"/>
+        android:layout_height="match_parent" >
+
+        <FrameLayout
+            android:id="@+id/youtube_layout_full"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="visible" />
+
+    </RelativeLayout>
 </FrameLayout>
